// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TooltipPopoverCombo /> snapshot should match snapshot 1`] = `
<TooltipPopoverCombo
  popoverContent={
    <button>
      Example popover content button
    </button>
  }
  tooltipContent={
    <Text>
      Example tooltip content
    </Text>
  }
  triggerComponent={
    <button>
      Example button
    </button>
  }
>
  <Popover
    aria-labelledby="1"
    interactive={true}
    onHide={[Function]}
    onShow={[Function]}
    trigger="click"
    triggerComponent={
      <Tooltip
        labelOrDescriptionId="1"
        onHide={[Function]}
        onShow={[Function]}
        setInstance={[Function]}
        triggerComponent={
          <button>
            Example button
          </button>
        }
        type="label"
      >
        <Text>
          Example tooltip content
        </Text>
      </Tooltip>
    }
  >
    <LazyTippy
      animation={false}
      appendTo="parent"
      hideOnClick={true}
      interactive={true}
      offset={
        [
          0,
          17,
        ]
      }
      onHidden={[Function]}
      onHide={[Function]}
      onShow={[Function]}
      placement="auto"
      plugins={
        [
          {
            "defaultValue": true,
            "fn": [Function],
            "name": "hideOnEsc",
          },
          {
            "fn": [Function],
            "name": "addBackdropPlugin",
          },
        ]
      }
      popperOptions={
        {
          "modifiers": [
            {
              "enabled": true,
              "name": "arrow",
              "options": {
                "element": "#arrow1",
                "padding": 5,
              },
            },
            {
              "name": "preventOverflow",
              "options": {
                "altAxis": true,
                "boundariesElement": "scrollParent",
                "padding": 8,
              },
            },
          ],
          "strategy": "absolute",
        }
      }
      removeTippyAriaHidden={false}
      render={[Function]}
      setInstance={[Function]}
      trigger="click"
    >
      <ForwardRef(TippyWrapper)
        animation={false}
        appendTo="parent"
        hideOnClick={true}
        interactive={true}
        offset={
          [
            0,
            17,
          ]
        }
        onHidden={[Function]}
        onHide={[Function]}
        onShow={[Function]}
        placement="auto"
        plugins={
          [
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "defaultValue": true,
              "fn": [Function],
              "name": "hideOnEsc",
            },
            {
              "fn": [Function],
              "name": "addBackdropPlugin",
            },
          ]
        }
        popperOptions={
          {
            "modifiers": [
              {
                "enabled": true,
                "name": "arrow",
                "options": {
                  "element": "#arrow1",
                  "padding": 5,
                },
              },
              {
                "name": "preventOverflow",
                "options": {
                  "altAxis": true,
                  "boundariesElement": "scrollParent",
                  "padding": 8,
                },
              },
            ],
            "strategy": "absolute",
          }
        }
        render={[Function]}
        trigger="click"
      >
        <Tippy
          animation={false}
          appendTo="parent"
          hideOnClick={true}
          interactive={true}
          offset={
            [
              0,
              17,
            ]
          }
          onHidden={[Function]}
          onHide={[Function]}
          onShow={[Function]}
          placement="auto"
          plugins={
            [
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "defaultValue": true,
                "fn": [Function],
                "name": "hideOnEsc",
              },
              {
                "fn": [Function],
                "name": "addBackdropPlugin",
              },
            ]
          }
          popperOptions={
            {
              "modifiers": [
                {
                  "enabled": true,
                  "name": "arrow",
                  "options": {
                    "element": "#arrow1",
                    "padding": 5,
                  },
                },
                {
                  "name": "preventOverflow",
                  "options": {
                    "altAxis": true,
                    "boundariesElement": "scrollParent",
                    "padding": 8,
                  },
                },
              ],
              "strategy": "absolute",
            }
          }
          render={[Function]}
          trigger="click"
        >
          <Tooltip
            aria-haspopup="dialog"
            labelOrDescriptionId="1"
            onHide={[Function]}
            onShow={[Function]}
            setInstance={[Function]}
            triggerComponent={
              <button>
                Example button
              </button>
            }
            type="label"
          >
            <Popover
              addBackdrop={false}
              aria-hidden={false}
              boundary="scrollParent"
              color="primary"
              interactive={false}
              offsetDistance={5}
              offsetSkidding={0}
              onHide={[Function]}
              onShow={[Function]}
              placement="auto"
              role="tooltip"
              setInstance={[Function]}
              showArrow={true}
              strategy="absolute"
              trigger="mouseenter focus"
              triggerComponent={
                <button
                  aria-haspopup="dialog"
                  aria-labelledby="1"
                >
                  Example button
                </button>
              }
              variant="small"
            >
              <LazyTippy
                animation={false}
                appendTo="parent"
                hideOnClick={true}
                interactive={false}
                offset={
                  [
                    0,
                    17,
                  ]
                }
                onHidden={[Function]}
                onHide={[Function]}
                onShow={[Function]}
                placement="auto"
                plugins={
                  [
                    {
                      "defaultValue": true,
                      "fn": [Function],
                      "name": "hideOnEsc",
                    },
                  ]
                }
                popperOptions={
                  {
                    "modifiers": [
                      {
                        "enabled": true,
                        "name": "arrow",
                        "options": {
                          "element": "#arrow1",
                          "padding": 5,
                        },
                      },
                      {
                        "name": "preventOverflow",
                        "options": {
                          "altAxis": true,
                          "boundariesElement": "scrollParent",
                          "padding": 8,
                        },
                      },
                    ],
                    "strategy": "absolute",
                  }
                }
                removeTippyAriaHidden={false}
                render={[Function]}
                setInstance={[Function]}
                trigger="mouseenter focus"
              >
                <ForwardRef(TippyWrapper)
                  animation={false}
                  appendTo="parent"
                  hideOnClick={true}
                  interactive={false}
                  offset={
                    [
                      0,
                      17,
                    ]
                  }
                  onHidden={[Function]}
                  onHide={[Function]}
                  onShow={[Function]}
                  placement="auto"
                  plugins={
                    [
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "defaultValue": true,
                        "fn": [Function],
                        "name": "hideOnEsc",
                      },
                    ]
                  }
                  popperOptions={
                    {
                      "modifiers": [
                        {
                          "enabled": true,
                          "name": "arrow",
                          "options": {
                            "element": "#arrow1",
                            "padding": 5,
                          },
                        },
                        {
                          "name": "preventOverflow",
                          "options": {
                            "altAxis": true,
                            "boundariesElement": "scrollParent",
                            "padding": 8,
                          },
                        },
                      ],
                      "strategy": "absolute",
                    }
                  }
                  render={[Function]}
                  trigger="mouseenter focus"
                >
                  <Tippy
                    animation={false}
                    appendTo="parent"
                    hideOnClick={true}
                    interactive={false}
                    offset={
                      [
                        0,
                        17,
                      ]
                    }
                    onHidden={[Function]}
                    onHide={[Function]}
                    onShow={[Function]}
                    placement="auto"
                    plugins={
                      [
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "defaultValue": true,
                          "fn": [Function],
                          "name": "hideOnEsc",
                        },
                      ]
                    }
                    popperOptions={
                      {
                        "modifiers": [
                          {
                            "enabled": true,
                            "name": "arrow",
                            "options": {
                              "element": "#arrow1",
                              "padding": 5,
                            },
                          },
                          {
                            "name": "preventOverflow",
                            "options": {
                              "altAxis": true,
                              "boundariesElement": "scrollParent",
                              "padding": 8,
                            },
                          },
                        ],
                        "strategy": "absolute",
                      }
                    }
                    render={[Function]}
                    trigger="mouseenter focus"
                  >
                    <button
                      aria-haspopup="dialog"
                      aria-labelledby="1"
                    >
                      Example button
                    </button>
                    <Portal
                      containerInfo={
                        <div
                          data-tippy-root=""
                          id="tippy-1"
                          style="pointer-events: none; z-index: 9999;"
                        >
                          
                        </div>
                      }
                    />
                  </Tippy>
                </ForwardRef(TippyWrapper)>
              </LazyTippy>
            </Popover>
            <div
              className="md-tooltip-label"
              id="1"
            >
              <Text>
                <p
                  className="md-text-wrapper"
                  data-type="body-primary"
                >
                  Example tooltip content
                </p>
              </Text>
            </div>
          </Tooltip>
          <Portal
            containerInfo={
              <div
                data-tippy-root=""
                id="tippy-2"
                style="z-index: 9999;"
              >
                
              </div>
            }
          />
        </Tippy>
      </ForwardRef(TippyWrapper)>
    </LazyTippy>
  </Popover>
</TooltipPopoverCombo>
`;

exports[`<TooltipPopoverCombo /> snapshot should match snapshot with otherPopoverProps  1`] = `
<TooltipPopoverCombo
  otherTooltipProps={
    {
      "placement": "bottom",
    }
  }
  popoverContent={
    <button>
      Example popover content button
    </button>
  }
  tooltipContent={
    <Text>
      Example tooltip content
    </Text>
  }
  triggerComponent={
    <button>
      Example button
    </button>
  }
>
  <Popover
    aria-labelledby="1"
    interactive={true}
    onHide={[Function]}
    onShow={[Function]}
    trigger="click"
    triggerComponent={
      <Tooltip
        labelOrDescriptionId="1"
        onHide={[Function]}
        onShow={[Function]}
        placement="bottom"
        setInstance={[Function]}
        triggerComponent={
          <button>
            Example button
          </button>
        }
        type="label"
      >
        <Text>
          Example tooltip content
        </Text>
      </Tooltip>
    }
  >
    <LazyTippy
      animation={false}
      appendTo="parent"
      hideOnClick={true}
      interactive={true}
      offset={
        [
          0,
          17,
        ]
      }
      onHidden={[Function]}
      onHide={[Function]}
      onShow={[Function]}
      placement="auto"
      plugins={
        [
          {
            "defaultValue": true,
            "fn": [Function],
            "name": "hideOnEsc",
          },
          {
            "fn": [Function],
            "name": "addBackdropPlugin",
          },
        ]
      }
      popperOptions={
        {
          "modifiers": [
            {
              "enabled": true,
              "name": "arrow",
              "options": {
                "element": "#arrow1",
                "padding": 5,
              },
            },
            {
              "name": "preventOverflow",
              "options": {
                "altAxis": true,
                "boundariesElement": "scrollParent",
                "padding": 8,
              },
            },
          ],
          "strategy": "absolute",
        }
      }
      removeTippyAriaHidden={false}
      render={[Function]}
      setInstance={[Function]}
      trigger="click"
    >
      <ForwardRef(TippyWrapper)
        animation={false}
        appendTo="parent"
        hideOnClick={true}
        interactive={true}
        offset={
          [
            0,
            17,
          ]
        }
        onHidden={[Function]}
        onHide={[Function]}
        onShow={[Function]}
        placement="auto"
        plugins={
          [
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "defaultValue": true,
              "fn": [Function],
              "name": "hideOnEsc",
            },
            {
              "fn": [Function],
              "name": "addBackdropPlugin",
            },
          ]
        }
        popperOptions={
          {
            "modifiers": [
              {
                "enabled": true,
                "name": "arrow",
                "options": {
                  "element": "#arrow1",
                  "padding": 5,
                },
              },
              {
                "name": "preventOverflow",
                "options": {
                  "altAxis": true,
                  "boundariesElement": "scrollParent",
                  "padding": 8,
                },
              },
            ],
            "strategy": "absolute",
          }
        }
        render={[Function]}
        trigger="click"
      >
        <Tippy
          animation={false}
          appendTo="parent"
          hideOnClick={true}
          interactive={true}
          offset={
            [
              0,
              17,
            ]
          }
          onHidden={[Function]}
          onHide={[Function]}
          onShow={[Function]}
          placement="auto"
          plugins={
            [
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "defaultValue": true,
                "fn": [Function],
                "name": "hideOnEsc",
              },
              {
                "fn": [Function],
                "name": "addBackdropPlugin",
              },
            ]
          }
          popperOptions={
            {
              "modifiers": [
                {
                  "enabled": true,
                  "name": "arrow",
                  "options": {
                    "element": "#arrow1",
                    "padding": 5,
                  },
                },
                {
                  "name": "preventOverflow",
                  "options": {
                    "altAxis": true,
                    "boundariesElement": "scrollParent",
                    "padding": 8,
                  },
                },
              ],
              "strategy": "absolute",
            }
          }
          render={[Function]}
          trigger="click"
        >
          <Tooltip
            aria-haspopup="dialog"
            labelOrDescriptionId="1"
            onHide={[Function]}
            onShow={[Function]}
            placement="bottom"
            setInstance={[Function]}
            triggerComponent={
              <button>
                Example button
              </button>
            }
            type="label"
          >
            <Popover
              addBackdrop={false}
              aria-hidden={false}
              boundary="scrollParent"
              color="primary"
              interactive={false}
              offsetDistance={5}
              offsetSkidding={0}
              onHide={[Function]}
              onShow={[Function]}
              placement="bottom"
              role="tooltip"
              setInstance={[Function]}
              showArrow={true}
              strategy="absolute"
              trigger="mouseenter focus"
              triggerComponent={
                <button
                  aria-haspopup="dialog"
                  aria-labelledby="1"
                >
                  Example button
                </button>
              }
              variant="small"
            >
              <LazyTippy
                animation={false}
                appendTo="parent"
                hideOnClick={true}
                interactive={false}
                offset={
                  [
                    0,
                    17,
                  ]
                }
                onHidden={[Function]}
                onHide={[Function]}
                onShow={[Function]}
                placement="bottom"
                plugins={
                  [
                    {
                      "defaultValue": true,
                      "fn": [Function],
                      "name": "hideOnEsc",
                    },
                  ]
                }
                popperOptions={
                  {
                    "modifiers": [
                      {
                        "enabled": true,
                        "name": "arrow",
                        "options": {
                          "element": "#arrow1",
                          "padding": 5,
                        },
                      },
                      {
                        "name": "preventOverflow",
                        "options": {
                          "altAxis": true,
                          "boundariesElement": "scrollParent",
                          "padding": 8,
                        },
                      },
                    ],
                    "strategy": "absolute",
                  }
                }
                removeTippyAriaHidden={false}
                render={[Function]}
                setInstance={[Function]}
                trigger="mouseenter focus"
              >
                <ForwardRef(TippyWrapper)
                  animation={false}
                  appendTo="parent"
                  hideOnClick={true}
                  interactive={false}
                  offset={
                    [
                      0,
                      17,
                    ]
                  }
                  onHidden={[Function]}
                  onHide={[Function]}
                  onShow={[Function]}
                  placement="bottom"
                  plugins={
                    [
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "defaultValue": true,
                        "fn": [Function],
                        "name": "hideOnEsc",
                      },
                    ]
                  }
                  popperOptions={
                    {
                      "modifiers": [
                        {
                          "enabled": true,
                          "name": "arrow",
                          "options": {
                            "element": "#arrow1",
                            "padding": 5,
                          },
                        },
                        {
                          "name": "preventOverflow",
                          "options": {
                            "altAxis": true,
                            "boundariesElement": "scrollParent",
                            "padding": 8,
                          },
                        },
                      ],
                      "strategy": "absolute",
                    }
                  }
                  render={[Function]}
                  trigger="mouseenter focus"
                >
                  <Tippy
                    animation={false}
                    appendTo="parent"
                    hideOnClick={true}
                    interactive={false}
                    offset={
                      [
                        0,
                        17,
                      ]
                    }
                    onHidden={[Function]}
                    onHide={[Function]}
                    onShow={[Function]}
                    placement="bottom"
                    plugins={
                      [
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "defaultValue": true,
                          "fn": [Function],
                          "name": "hideOnEsc",
                        },
                      ]
                    }
                    popperOptions={
                      {
                        "modifiers": [
                          {
                            "enabled": true,
                            "name": "arrow",
                            "options": {
                              "element": "#arrow1",
                              "padding": 5,
                            },
                          },
                          {
                            "name": "preventOverflow",
                            "options": {
                              "altAxis": true,
                              "boundariesElement": "scrollParent",
                              "padding": 8,
                            },
                          },
                        ],
                        "strategy": "absolute",
                      }
                    }
                    render={[Function]}
                    trigger="mouseenter focus"
                  >
                    <button
                      aria-haspopup="dialog"
                      aria-labelledby="1"
                    >
                      Example button
                    </button>
                    <Portal
                      containerInfo={
                        <div
                          data-tippy-root=""
                          id="tippy-5"
                          style="pointer-events: none; z-index: 9999;"
                        >
                          
                        </div>
                      }
                    />
                  </Tippy>
                </ForwardRef(TippyWrapper)>
              </LazyTippy>
            </Popover>
            <div
              className="md-tooltip-label"
              id="1"
            >
              <Text>
                <p
                  className="md-text-wrapper"
                  data-type="body-primary"
                >
                  Example tooltip content
                </p>
              </Text>
            </div>
          </Tooltip>
          <Portal
            containerInfo={
              <div
                data-tippy-root=""
                id="tippy-6"
                style="z-index: 9999;"
              >
                
              </div>
            }
          />
        </Tippy>
      </ForwardRef(TippyWrapper)>
    </LazyTippy>
  </Popover>
</TooltipPopoverCombo>
`;

exports[`<TooltipPopoverCombo /> snapshot should match snapshot with otherTooltipProps  1`] = `
<TooltipPopoverCombo
  otherTooltipProps={
    {
      "placement": "top",
    }
  }
  popoverContent={
    <button>
      Example popover content button
    </button>
  }
  tooltipContent={
    <Text>
      Example tooltip content
    </Text>
  }
  triggerComponent={
    <button>
      Example button
    </button>
  }
>
  <Popover
    aria-labelledby="1"
    interactive={true}
    onHide={[Function]}
    onShow={[Function]}
    trigger="click"
    triggerComponent={
      <Tooltip
        labelOrDescriptionId="1"
        onHide={[Function]}
        onShow={[Function]}
        placement="top"
        setInstance={[Function]}
        triggerComponent={
          <button>
            Example button
          </button>
        }
        type="label"
      >
        <Text>
          Example tooltip content
        </Text>
      </Tooltip>
    }
  >
    <LazyTippy
      animation={false}
      appendTo="parent"
      hideOnClick={true}
      interactive={true}
      offset={
        [
          0,
          17,
        ]
      }
      onHidden={[Function]}
      onHide={[Function]}
      onShow={[Function]}
      placement="auto"
      plugins={
        [
          {
            "defaultValue": true,
            "fn": [Function],
            "name": "hideOnEsc",
          },
          {
            "fn": [Function],
            "name": "addBackdropPlugin",
          },
        ]
      }
      popperOptions={
        {
          "modifiers": [
            {
              "enabled": true,
              "name": "arrow",
              "options": {
                "element": "#arrow1",
                "padding": 5,
              },
            },
            {
              "name": "preventOverflow",
              "options": {
                "altAxis": true,
                "boundariesElement": "scrollParent",
                "padding": 8,
              },
            },
          ],
          "strategy": "absolute",
        }
      }
      removeTippyAriaHidden={false}
      render={[Function]}
      setInstance={[Function]}
      trigger="click"
    >
      <ForwardRef(TippyWrapper)
        animation={false}
        appendTo="parent"
        hideOnClick={true}
        interactive={true}
        offset={
          [
            0,
            17,
          ]
        }
        onHidden={[Function]}
        onHide={[Function]}
        onShow={[Function]}
        placement="auto"
        plugins={
          [
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "fn": [Function],
            },
            {
              "defaultValue": true,
              "fn": [Function],
              "name": "hideOnEsc",
            },
            {
              "fn": [Function],
              "name": "addBackdropPlugin",
            },
          ]
        }
        popperOptions={
          {
            "modifiers": [
              {
                "enabled": true,
                "name": "arrow",
                "options": {
                  "element": "#arrow1",
                  "padding": 5,
                },
              },
              {
                "name": "preventOverflow",
                "options": {
                  "altAxis": true,
                  "boundariesElement": "scrollParent",
                  "padding": 8,
                },
              },
            ],
            "strategy": "absolute",
          }
        }
        render={[Function]}
        trigger="click"
      >
        <Tippy
          animation={false}
          appendTo="parent"
          hideOnClick={true}
          interactive={true}
          offset={
            [
              0,
              17,
            ]
          }
          onHidden={[Function]}
          onHide={[Function]}
          onShow={[Function]}
          placement="auto"
          plugins={
            [
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "fn": [Function],
              },
              {
                "defaultValue": true,
                "fn": [Function],
                "name": "hideOnEsc",
              },
              {
                "fn": [Function],
                "name": "addBackdropPlugin",
              },
            ]
          }
          popperOptions={
            {
              "modifiers": [
                {
                  "enabled": true,
                  "name": "arrow",
                  "options": {
                    "element": "#arrow1",
                    "padding": 5,
                  },
                },
                {
                  "name": "preventOverflow",
                  "options": {
                    "altAxis": true,
                    "boundariesElement": "scrollParent",
                    "padding": 8,
                  },
                },
              ],
              "strategy": "absolute",
            }
          }
          render={[Function]}
          trigger="click"
        >
          <Tooltip
            aria-haspopup="dialog"
            labelOrDescriptionId="1"
            onHide={[Function]}
            onShow={[Function]}
            placement="top"
            setInstance={[Function]}
            triggerComponent={
              <button>
                Example button
              </button>
            }
            type="label"
          >
            <Popover
              addBackdrop={false}
              aria-hidden={false}
              boundary="scrollParent"
              color="primary"
              interactive={false}
              offsetDistance={5}
              offsetSkidding={0}
              onHide={[Function]}
              onShow={[Function]}
              placement="top"
              role="tooltip"
              setInstance={[Function]}
              showArrow={true}
              strategy="absolute"
              trigger="mouseenter focus"
              triggerComponent={
                <button
                  aria-haspopup="dialog"
                  aria-labelledby="1"
                >
                  Example button
                </button>
              }
              variant="small"
            >
              <LazyTippy
                animation={false}
                appendTo="parent"
                hideOnClick={true}
                interactive={false}
                offset={
                  [
                    0,
                    17,
                  ]
                }
                onHidden={[Function]}
                onHide={[Function]}
                onShow={[Function]}
                placement="top"
                plugins={
                  [
                    {
                      "defaultValue": true,
                      "fn": [Function],
                      "name": "hideOnEsc",
                    },
                  ]
                }
                popperOptions={
                  {
                    "modifiers": [
                      {
                        "enabled": true,
                        "name": "arrow",
                        "options": {
                          "element": "#arrow1",
                          "padding": 5,
                        },
                      },
                      {
                        "name": "preventOverflow",
                        "options": {
                          "altAxis": true,
                          "boundariesElement": "scrollParent",
                          "padding": 8,
                        },
                      },
                    ],
                    "strategy": "absolute",
                  }
                }
                removeTippyAriaHidden={false}
                render={[Function]}
                setInstance={[Function]}
                trigger="mouseenter focus"
              >
                <ForwardRef(TippyWrapper)
                  animation={false}
                  appendTo="parent"
                  hideOnClick={true}
                  interactive={false}
                  offset={
                    [
                      0,
                      17,
                    ]
                  }
                  onHidden={[Function]}
                  onHide={[Function]}
                  onShow={[Function]}
                  placement="top"
                  plugins={
                    [
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "fn": [Function],
                      },
                      {
                        "defaultValue": true,
                        "fn": [Function],
                        "name": "hideOnEsc",
                      },
                    ]
                  }
                  popperOptions={
                    {
                      "modifiers": [
                        {
                          "enabled": true,
                          "name": "arrow",
                          "options": {
                            "element": "#arrow1",
                            "padding": 5,
                          },
                        },
                        {
                          "name": "preventOverflow",
                          "options": {
                            "altAxis": true,
                            "boundariesElement": "scrollParent",
                            "padding": 8,
                          },
                        },
                      ],
                      "strategy": "absolute",
                    }
                  }
                  render={[Function]}
                  trigger="mouseenter focus"
                >
                  <Tippy
                    animation={false}
                    appendTo="parent"
                    hideOnClick={true}
                    interactive={false}
                    offset={
                      [
                        0,
                        17,
                      ]
                    }
                    onHidden={[Function]}
                    onHide={[Function]}
                    onShow={[Function]}
                    placement="top"
                    plugins={
                      [
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "fn": [Function],
                        },
                        {
                          "defaultValue": true,
                          "fn": [Function],
                          "name": "hideOnEsc",
                        },
                      ]
                    }
                    popperOptions={
                      {
                        "modifiers": [
                          {
                            "enabled": true,
                            "name": "arrow",
                            "options": {
                              "element": "#arrow1",
                              "padding": 5,
                            },
                          },
                          {
                            "name": "preventOverflow",
                            "options": {
                              "altAxis": true,
                              "boundariesElement": "scrollParent",
                              "padding": 8,
                            },
                          },
                        ],
                        "strategy": "absolute",
                      }
                    }
                    render={[Function]}
                    trigger="mouseenter focus"
                  >
                    <button
                      aria-haspopup="dialog"
                      aria-labelledby="1"
                    >
                      Example button
                    </button>
                    <Portal
                      containerInfo={
                        <div
                          data-tippy-root=""
                          id="tippy-3"
                          style="pointer-events: none; z-index: 9999;"
                        >
                          
                        </div>
                      }
                    />
                  </Tippy>
                </ForwardRef(TippyWrapper)>
              </LazyTippy>
            </Popover>
            <div
              className="md-tooltip-label"
              id="1"
            >
              <Text>
                <p
                  className="md-text-wrapper"
                  data-type="body-primary"
                >
                  Example tooltip content
                </p>
              </Text>
            </div>
          </Tooltip>
          <Portal
            containerInfo={
              <div
                data-tippy-root=""
                id="tippy-4"
                style="z-index: 9999;"
              >
                
              </div>
            }
          />
        </Tippy>
      </ForwardRef(TippyWrapper)>
    </LazyTippy>
  </Popover>
</TooltipPopoverCombo>
`;
